cabal-version:      2.4

name:               javalette

version:            0.1

synopsis:           A Javalette compiler

author:             Johan Selin

tested-with:
  GHC == 9.4.8

build-type:         Simple

extra-source-files:
  Javalette.cf

library compiler
    exposed-modules:
      TypeChecker
      FunType
      Annotated
      Javalette.Par
      LLVM.Compiler
    other-modules:
      Javalette.Abs
      Javalette.Lex
      Javalette.Print
      LLVM.Code
    autogen-modules:
      Javalette.Abs
      Javalette.Lex
      Javalette.Par
      Javalette.Print
    build-depends:
   -- Lower bounds set to versions shipped with GHC 8.4.4
      , base       >= 4.11.1.0 && < 5
      , array      >= 0.5.2.0  && < 0.6
      , containers >= 0.5.11.0 && < 0.8
      , mtl        >= 2.2.2    && < 2.4
      , transformers

    hs-source-dirs:   ., LLVM
    default-language: Haskell2010
    default-extensions:
      LambdaCase
      TupleSections

executable debug
    main-is:          Debug.hs
    build-depends:
        base ^>=4.17.2.1,
        compiler,
    hs-source-dirs:   app
    default-language: Haskell2010

executable jlc
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        compiler,
    hs-source-dirs:   app
    default-language: Haskell2010
